// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test render function 'RenderList' should return no list when empty list is provided.: <ul data-testid="test-list" class="list-box"><li>EMPTY_CONTENT_PROVIDED</li></ul> 1`] = `
<ul
  class="list-box"
  data-testid="test-list"
>
  <li>
    EMPTY_CONTENT_PROVIDED
  </li>
</ul>
`;

exports[`test render function 'RenderList' should return rendered 'ul' list when no type is provided.: <ul class="list-box" data-testid="test-list"><li>item1</li><li>item2</li><li>item3</li></ul> 1`] = `
<ul
  class="list-box"
  data-testid="test-list"
>
  <li>
    item1
  </li>
  <li>
    item2
  </li>
  <li>
    item3
  </li>
</ul>
`;

exports[`test render function 'RenderList' should return rendered list for provided 'ol' type with 'a' element.: <ol class="list-box" data-testid="test-list"><li>item1 <a href="https://test.com" rel="noopener" target="_blank">Test</a></li></ol> 1`] = `
<ol
  class="list-box"
  data-testid="test-list"
>
  <li>
    item1 
    <a
      href="https://test.com"
      rel="noopener"
      target="_blank"
    >
      Test
    </a>
  </li>
</ol>
`;

exports[`test render function 'RenderList' should return rendered list for provided 'ol' type.: <ol data-testid="test-list" class="list-box"><li>item1</li><li>item2</li><li>item3</li></ol> 1`] = `
<ol
  class="list-box"
  data-testid="test-list"
>
  <li>
    item1
  </li>
  <li>
    item2
  </li>
  <li>
    item3
  </li>
</ol>
`;

exports[`test render function 'RenderList' should return rendered list for provided 'ul' type with 'a' element.: <ul class="list-box" data-testid="test-list"><li>item1 <a href="https://test.com" rel="noopener" target="_blank">Test</a></li></ul> 1`] = `
<ul
  class="list-box"
  data-testid="test-list"
>
  <li>
    item1 
    <a
      href="https://test.com"
      rel="noopener"
      target="_blank"
    >
      Test
    </a>
  </li>
</ul>
`;

exports[`test render function 'RenderList' should return rendered list for provided 'ul' type.: <ul data-testid="test-list" class="list-box"><li>item1</li><li>item2</li><li>item3</li></ul> 1`] = `
<ul
  class="list-box"
  data-testid="test-list"
>
  <li>
    item1
  </li>
  <li>
    item2
  </li>
  <li>
    item3
  </li>
</ul>
`;
